Fix overflow

--- a/src/components/Footer/footer.module.sass
+++ b/src/components/Footer/footer.module.sass
@@ -1,9 +1,6 @@
-.container
+.footer
     background: var(--footer-background-color)
     margin-top: 1.5rem
-    width: 100%
-
-.footer
     padding-top: 1rem
     padding-bottom: 1rem
 
